# drift

./: .gitignore  DRIFT_ONDEVICE_AI_MASTER_PLAN.md  MARKETPLACE.md  Makefile  README.md  README_EXTENDED_DESKTOP.md  action.yml  action.yml.full  charts-of-metrics copy.md  charts-of-metrics.md  docker-compose.yml  mock-design-1.html
drift-chrome-extension/crates/volley-core/: Cargo.toml
drift-chrome-extension/crates/volley-core/src/: lib.rs  wasm.rs
drift-lab/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
drift-lab/src-tauri/capabilities/: default.json
drift-lab/src-tauri/examples/: realtime_smoke.rs
drift-lab/src-tauri/icons/: README.md  icon.icns
drift-lab/src-tauri/src/: app_config.rs  backend.rs  commands.rs  db.rs  docker.rs  event_log.rs  event_log_commands.rs  event_log_to_profile.rs  event_source_commands.rs  events.rs  folder_commands.rs  fuzzy_join.rs  history.rs  join_commands.rs  lib.rs  log_bus.rs  main.rs  model_config.rs  model_discovery.rs  path_alias.rs  presets.rs  scan_commands.rs  secret_store.rs  shutdown.rs  state.rs  static_scan_index.rs  tray.rs  workflow.rs
drift-lab/src-tauri/src/agent/: agent_loop.rs  anthropic.rs  mod.rs  openai.rs  provider.rs  tools.rs  types.rs  workflow.rs
drift-lab/src-tauri/src/cli_install/: mod.rs  ports.rs
drift-lab/src-tauri/src/folder/: fingerprint.rs  mod.rs  registry.rs
drift-lab/src-tauri/src/http_server/: embed.rs  mod.rs  openapi.rs  routes.rs  state.rs
drift-lab/src-tauri/src/patch/: commands.rs  mod.rs  types.rs
drift-lab/src-tauri/src/realtime/: mod.rs  ports.rs
drift-lab/src-tauri/src/scan/: mod.rs  progress_sink.rs  runner.rs  storage.rs  suggester.rs  types.rs
drift-lab/src-tauri/src/tools/: analyze_samples.rs  check_docker.rs  copy_to_container.rs  detect_runtime.rs  discover_project.rs  drive_load.rs  ensure_image.rs  find_image.rs  find_test_runner_for_profiling.rs  install_profiler.rs  list_directory.rs  mod.rs  read_file_excerpt.rs  read_file_lines.rs
drift-lab/src-tauri/tests/: agent_workflow.rs  llm_stream.rs  openai_live.rs  runtime_discovery.rs
drift-observability/drift-python/: README.md  pyproject.toml
drift-observability/drift-python/drift/: __init__.py  config.py  instrument.py  s3_upload.py  sinks.py  writer.py
drift-observability/drift-python/tests/: test_drift.py
drift-static-profiler/: .gitignore  BENCH_BASELINE.md  CALIBRATION.md  Cargo.toml  INSIGHTS_PLAN.md  Makefile  PR_ALGORITHMS_TODO.md  PR_QUALITY_METRICS_PLAN.md  PR_QUALITY_NEXT_RESEARCH_PROMPT.txt  PR_QUALITY_RESEARCH.md  PR_QUALITY_research_agent.json  QUERY_ORM_ANALYZER_PLAN.md
drift-static-profiler/.cargo/: config.toml
drift-static-profiler/benches/: scan_pipeline.rs
drift-static-profiler/research/: AI_ML_LLM_PERF_ANTIPATTERNS.md  AUTH_CRYPTO_SECURITY_PERF.md  MIGRATION_AST_SHAPES.md  ORM_EAGERLOAD_DTO_CACHE_STREAM_CATALOG.md  ORM_MIGRATIONS_POOLS_TRANSACTIONS.md  ORM_NICHE_CATALOG.md  ORM_PYTHON_STATIC_ANALYSIS_PLAN.md  ORM_SQL_PREDICTION.md  ORM_STATIC_ANALYSIS_PLAN.md  ORM_TO_SQL_TRANSLATION.md  OSS_BUG_CORPUS_METHODOLOGY.md  SQL_IO_HEURISTICS_AND_PLUGIN_ARCH.md
drift-static-profiler/schema/: improved-pr-comment.md  pr_algorithms_constants.json  profile.schema.json  scan_pr_input.openapi.yaml  scan_pr_output.openapi.yaml
drift-static-profiler/src/: api.rs  categories.rs  compact.rs  containment.rs  diff.rs  docker.rs  dockerfile.rs  dot_export.rs  graph.rs  insights.rs  lib.rs  main.rs  manifest.rs  mem.rs  metrics.rs  pagerank.rs  parser.rs  pr_scope.rs  progress.rs  report.rs  resolver.rs  roots.rs  sarif_export.rs  scans_index.rs  sql_ast.rs  sql_lint.rs  tags.rs  tree.rs  voice_wasm.rs  walker.rs
drift-static-profiler/src/languages/: go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  scala.rs  typescript.rs  typescript_xml.rs
drift-static-profiler/src/orm/: context.rs  dialect.rs  fusion.rs  mod.rs  model_graph.rs  shape.rs  sql_ir.rs  sql_ir_rules.rs  walker.rs
drift-static-profiler/src/pr_algorithms/: architecture_flow.rs  business_logic.rs  code_suggestions.rs  constants.rs  counts.rs  duplication.rs  merge.rs  mermaid.rs  mod.rs  nfr_edge_cases.rs  pr_signals.rs  symbol_label.rs  tech_debt.rs  tests_in_graph.rs  types.rs  value_customer.rs  value_money.rs  value_runtime.rs  value_runtime_ux.rs  visual_summary.rs
drift-static-profiler/src/research_classefiers+categories/: Cargo.toml  README.md  build_otel_registry.py  generate.py  go.json  go_otel.yaml  go_stdlib.yaml  java.json  java_otel.yaml  java_stdlib.yaml  javascript.json  js_otel.yaml  js_stdlib.yaml  main.rs  module_overrides.json  python.json  python_otel.yaml  python_stdlib.yaml  receiver_patterns.json  rust.json  rust.yaml  scala.json  scala.yaml  sync_otel_registry.py  unambiguous_methods.json
drift-static-profiler/src/voice/: mod.rs
drift-static-profiler/tests/: anonymous_callables.rs  bindings_e2e.rs  containment_e2e.rs  coverage.rs  diff_status_multilang_e2e.rs  diff_status_real_git.rs  fixtures_roundtrip.rs  integration.rs  lambda_reach_all_languages.rs  long_tail_call_forms.rs  measure_compaction.rs  mermaid_validate.rs  module_reaches_lambdas.rs  orm_integration.rs  orm_n_plus_one_per_language.rs  orm_per_language_n1.rs  orm_phase34_integration.rs  orm_phase5_integration.rs  orm_scala_kotlin_integration.rs  orm_scala_kotlin_negatives.rs  orm_scan_integration.rs  orm_ts_integration.rs  pr_quality_gauges_e2e.rs  pr_scope_integration.rs  pr_scope_schema.rs  resolver_constructors.rs  scan_pr_diff_status.rs  scan_pr_hyphen_args.rs  schema_v12_intrinsics.rs  tpws_entry_reach.rs  universal_call_graph.rs  write_report_formats.rs
drift-static-profiler/tests/fixtures/: mermaid_adversarial_labels.json
drift-static-profiler/viewer/: package-lock.json  package.json  vite.config.ts
drift-static-profiler/viewer/src/: App.tsx  CallGraphView.tsx  CallTreeView.tsx  DetailsPane.tsx  HotPaths.tsx  Insights.tsx  RootsView.tsx  ScanReport.tsx  Smells.tsx  Statistics.tsx  callGraph.ts  decompress.ts  fixtures.ts  tooltips.ts  transform.ts  types.ts  useResizableColumns.tsx
(+2668 files in other folders)
