[package]
name = "drift-static-profiler"
version = "0.6.0"
edition = "2021"
description = "Language-agnostic static call-tree analyzer for drift-lab"
license = "MIT"

[[bin]]
name = "drift-static-profiler"
path = "src/main.rs"

[lib]
name = "drift_static_profiler"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-containerfile = "0.8"
serde_yaml = "0.9"
toml = { version = "0.8", default-features = false, features = ["parse"] }
ignore = "0.4"
# Compiled-once test-name patterns shared by walker file/directory
# filtering. We only need the default "perf" feature set; no Unicode
# property classes — our needles are pure ASCII.
regex = { version = "1", default-features = false, features = ["std", "perf"] }
petgraph = "0.8"
# Data-parallelism for tree-sitter parsing across files. Each worker
# thread owns its own Parser and pre-compiled Query (one per language),
# so the per-file query-compile cost in `tags::extract_tags_from_source`
# is amortized down to once-per-thread-per-language.
rayon = "1"
# Terminal progress bars (the modern tqdm/Bun/HuggingFace style:
# overall + per-phase bars, ETA, rate, current-file). Used by
# `progress::CliProgress` — library callers that pass `NullProgress`
# don't pull any of this in at runtime. indicatif gracefully
# degrades to silent on non-TTY without us needing IsTerminal checks
# in the CLI, while still letting completion lines flow to scrollback.
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# Wall-clock timestamp for `Generator.captured_at` (ISO 8601 / RFC 3339).
# Default features pull in `oldtime` and a windowsdll; we only need the
# system-clock + formatter, so disable defaults and opt into `clock` only.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Generic SQL parser (Apache-2.0). Used by `sql_lint.rs` to parse SQL
# string literals captured from source. Multi-dialect; picks Postgres /
# MySQL / SQLite / MsSql / Snowflake / BigQuery / Generic based on
# driver-import inference (see `sql_patterns.json` driver_dialect map).
sqlparser = "0.62"
# Real PostgreSQL parser (BSD-3 + Postgres license) — bindings to
# libpg_query. Used when we know the SQL is Postgres-flavored: gives
# the actual Postgres parse tree plus `normalize()` (replaces literals
# with $1..$N) and `fingerprint()` (stable identity for dedup across
# call sites). Falling back to `sqlparser` when the dialect is unknown.
pg_query = "6"

[dev-dependencies]
# Validates emitted JSON reports against the published schema in the
# `report_json_validates_against_schema_for_each_new_language` integration
# test. Dev-only — runtime users do not pay for it.
jsonschema = { version = "0.46", default-features = false }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
