[package]
name = "drift-static-profiler"
version = "0.9.2"
edition = "2021"
description = "Language-agnostic static call-tree analyzer for drift-lab"
license = "MIT"

[[bin]]
name = "drift-static-profiler"
path = "src/main.rs"

[lib]
name = "drift_static_profiler"
path = "src/lib.rs"

# Build-target feature split. `native` (default) is the full CLI exactly as
# before — nothing about a native build changes. Building with
# `--no-default-features` drops the deps that can't cross-compile to
# wasm32-wasip1: the Postgres C parser (pg_query — currently UNUSED), the
# rayon thread pool (wasm has no threads), POSIX getrusage (libc), and the
# terminal progress UI (indicatif → console/libc). The analysis logic is
# identical; only parallelism and the RSS-sampling/progress side-signals differ.
[features]
default = ["native"]
native = ["dep:pg_query", "dep:libc", "dep:rayon", "dep:indicatif"]

[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-containerfile = "0.8"
serde_yaml = "0.9"
toml = { version = "0.8", default-features = false, features = ["parse"] }
ignore = "0.4"
# Compiled-once test-name patterns shared by walker file/directory
# filtering. We only need the default "perf" feature set; no Unicode
# property classes — our needles are pure ASCII.
regex = { version = "1", default-features = false, features = ["std", "perf"] }
# String-similarity ratios for `pr_algorithms::duplication` — replaces
# the Python rapidfuzz dep used by the previous Python implementation.
# Pure-Rust, no system deps.
strsim = "0.11"
# Identifier case-splitting (camelCase / snake_case / SCREAMING_SNAKE →
# words) for the `pr_algorithms::pr_quality` comprehensibility naming
# metric. Zero-dependency, std-only, MIT/Apache-2.0. Chosen over
# convert_case (which pulls unicode-segmentation). See PR_QUALITY_RESEARCH §8.1.
heck = "0.5"
petgraph = "0.8"
# Data-parallelism for tree-sitter parsing across files. Each worker
# thread owns its own Parser and pre-compiled Query (one per language),
# so the per-file query-compile cost in `tags::extract_tags_from_source`
# is amortized down to once-per-thread-per-language.
rayon = { version = "1", optional = true }
# Terminal progress bars (the modern tqdm/Bun/HuggingFace style:
# overall + per-phase bars, ETA, rate, current-file). Used by
# `progress::CliProgress` — library callers that pass `NullProgress`
# don't pull any of this in at runtime. indicatif gracefully
# degrades to silent on non-TTY without us needing IsTerminal checks
# in the CLI, while still letting completion lines flow to scrollback.
indicatif = { version = "0.18", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# POSIX getrusage(RUSAGE_SELF) for self-RSS sampling (src/mem.rs). The
# memory soft-limit guard + per-phase RSS logging depend on it so an
# OOM is logged *before* the kernel SIGKILLs us. Tiny, ubiquitous, no
# system deps; only the `rusage` / `getrusage` surface is used.
libc = { version = "0.2", optional = true }
# Optional gzip for `--gzip` on `analyze-root` / `scan`. Uses
# `rust_backend` to avoid the C zlib dep so the binary stays
# self-contained + cross-compiles cleanly.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Wall-clock timestamp for `Generator.captured_at` (ISO 8601 / RFC 3339).
# Default features pull in `oldtime` and a windowsdll; we only need the
# system-clock + formatter, so disable defaults and opt into `clock` only.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Generic SQL parser (Apache-2.0). Used by `sql_lint.rs` to parse SQL
# string literals captured from source. Multi-dialect; picks Postgres /
# MySQL / SQLite / MsSql / Snowflake / BigQuery / Generic based on
# driver-import inference (see `sql_patterns.json` driver_dialect map).
sqlparser = "0.62"
# Real PostgreSQL parser (BSD-3 + Postgres license) — bindings to
# libpg_query. Used when we know the SQL is Postgres-flavored: gives
# the actual Postgres parse tree plus `normalize()` (replaces literals
# with $1..$N) and `fingerprint()` (stable identity for dedup across
# call sites). Falling back to `sqlparser` when the dialect is unknown.
pg_query = { version = "6", optional = true }
# Structured logging facade. The library only depends on the facade —
# no concrete sink is wired in here (Clean Architecture: the binary
# decides where logs go). When this crate is used as a library
# (e.g. embedded in the Tauri desktop app) the host's subscriber
# picks up every event we emit. When used as the CLI, `main.rs`
# installs `tracing-subscriber` to print to stderr.
tracing = "0.1"
# Subscriber + env-filter for the standalone CLI. Bin-only: lib
# consumers don't pay for it because the host already owns a
# subscriber. Default features keep the dep light (no JSON / chrono
# layer — we only use the compact stderr formatter).
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
# Validates emitted JSON reports against the published schema in the
# `report_json_validates_against_schema_for_each_new_language` integration
# test. Dev-only — runtime users do not pay for it.
jsonschema = { version = "0.46", default-features = false }
# Statistical micro-benchmarks for the tags-extract / graph-build /
# resolver hot paths. Used to set baseline numbers in BENCH_BASELINE.md
# and to perf-gate the resolver/containment changes coming in Phases 1+.
# `html_reports` lets us inspect distributions when a number moves.
criterion = { version = "0.5", features = ["html_reports"] }
# Token-count ORACLE for the `pr_quality::tokens` byte-based estimator
# validation (o200k_base / cl100k_base). Dev-only: the embedded BPE blob
# never ships in the release binary; MIT; fully offline (no network in CI).
# Validates our `bytes/K_code` estimate against real OpenAI tokenization.
# See PR_QUALITY_RESEARCH §8.2.
tiktoken-rs = "0.11"
# Property-based tests for the six pr_quality scorers: bounds ∈ [0,1],
# determinism, order-independence, monotonicity, NaN/Inf guards. Shrinking
# + persisted `proptest-regressions/` seeds match the constants-regression
# governance discipline. Dev-only.
proptest = "1"

[[bench]]
name = "scan_pipeline"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
