[package]
name = "drift-lab"
version = "0.1.0"
description = "Drift Lab — desktop app for profiling Dockerized services"
authors = ["refactor-labs"]
license = "MIT"
repository = "https://github.com/refactor-labs-pub/drift"
edition = "2021"
rust-version = "1.89"

[lib]
name = "drift_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"

# Async + Docker
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bollard = "0.17"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# LLM client. Every supported runtime (cloud or local) speaks OpenAI-compat
# HTTP, so a single `rig::providers::openai::Client` handles them all —
# drift-lab itself runs no inference. Local runtimes (Ollama, LM Studio,
# Docker Model Runner) are discovered via `model_discovery::probe_local_runtimes`.
rig-core = "0.35"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tauri-plugin-store = "2"

# Persistence: SQLite via sqlx (async, runtime-tokio). Used for the local-
# runtime discovery cache so the UI can render last-known runtimes
# instantly while a fresh probe runs in the background.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

# Misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
# Subscriber + log-to-tracing bridge — surfaces every `tracing::info!` we emit
# in the agent / tools / workflow paths to stderr (visible when running the
# binary from a terminal) and to anything that hooks into `log` upstream.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# enables custom protocol assets when building for production
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# Mock HTTP server for the LLM stream / agent-turn integration test.
wiremock = "0.6"
