[package]
name = "drift-lab"
version = "0.1.0"
description = "Drift Lab — desktop app for profiling Dockerized services"
authors = ["refactor-labs"]
license = "MIT"
repository = "https://github.com/refactorlab/drift"
edition = "2021"
rust-version = "1.89"

[lib]
name = "drift_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"

# Async + Docker
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bollard = "0.17"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Supabase Realtime subscriber (Phase B+C). Phoenix Channels protocol over
# WSS — pure JSON frames, no custom subprotocol — so a generic WS client
# is all we need. `rustls-tls-webpki-roots` matches the rest of the crate's
# TLS posture (reqwest already uses rustls + webpki-roots), so we don't
# pull in OpenSSL transitively. `native-tls` would force a system OpenSSL
# dep at build/runtime which we'd then have to ship.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
# rustls 0.23 requires a process-wide CryptoProvider to be installed
# before any TLS handshake. tokio-tungstenite uses rustls under the
# `rustls-tls-webpki-roots` feature above but does NOT install a
# provider — so the first connect_async panics with "Could not
# automatically determine the process-level CryptoProvider". We add
# rustls as a direct dep with the `aws-lc-rs` feature and install it
# lazily inside `realtime::infra::tungstenite_transport`. Affects both
# the desktop app and the `realtime_smoke` example.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Folder fingerprinting: derive a stable filename-safe id from an
# absolute path so per-folder data (static scans + active event_logs)
# can live under `~/.drift/scans/<fingerprint>/`. Both crates are
# already transitively present; pulling them in as direct deps lets us
# call them by name. `sha2` for the hash, `hex` for hex-encoding the
# truncated digest.
sha2 = "0.10"
hex = "0.4"

# LLM client. Every supported runtime (cloud or local) speaks OpenAI-compat
# HTTP, so a single `rig::providers::openai::Client` handles them all —
# drift-lab itself runs no inference. Local runtimes (Ollama, LM Studio,
# Docker Model Runner) are discovered via `model_discovery::probe_local_runtimes`.
rig-core = "0.35"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tauri-plugin-store = "2"

# Persistence: SQLite via sqlx (async, runtime-tokio). Used for the local-
# runtime discovery cache so the UI can render last-known runtimes
# instantly while a fresh probe runs in the background.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

# Static-call-tree analyzer. Sibling crate consumed as a library so the
# desktop app can invoke the same pipeline the `drift-static-profiler` CLI
# uses (scan-prompt + analyzer) without shelling out to a separate binary.
# Path-dep keeps the two trees lockstep — there is no published version to
# pin against, and the GitHub Actions build context already checks out the
# whole repo so the `..` path resolves cleanly in CI.
drift-static-profiler = { path = "../../drift-static-profiler" }

# Misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
# Subscriber + log-to-tracing bridge — surfaces every `tracing::info!` we emit
# in the agent / tools / workflow paths to stderr (visible when running the
# binary from a terminal) and to anything that hooks into `log` upstream.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# LLM-friendly patch envelope (parses <FILE_CHANGES>, applies hunks with
# whitespace-drift tolerance). Used by `crate::patch::commands::apply_patch`.
udiffx = "0.1"

# Localhost HTTP server: exposes the static-profiler viewer + a documented
# REST API (Swagger UI at /docs) so external tools and the user's browser
# can drive scans and inspect ~/.drift/scans/* without going through Tauri's
# IPC. Bound to 127.0.0.1 only.
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
# Embed the built viewer (drift-static-profiler/viewer/dist) into the
# binary so the desktop app has no filesystem dependency at runtime.
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
mime_guess = "2"
tokio-stream = "0.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# enables custom protocol assets when building for production
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
# Mock HTTP server for the LLM stream / agent-turn integration test.
wiremock = "0.6"
# Temp file fixtures for the event_log JSONL parser tests.
tempfile = "3"

# Known Dependabot alert: RUSTSEC-2024-0429 / GHSA-wrw7-89jp-8q8g
# (`glib::VariantStrIter` unsoundness). `glib 0.18.5` is pulled in
# transitively through `tauri 2.11.1 → wry → webkit2gtk 2.0.x →
# gtk 0.18.2 → glib ^0.18`. The fix (`glib 0.20.0+`) cannot be applied
# here directly because `gtk 0.18` hard-pins glib to the 0.18 series,
# and the gtk3-rs 0.18 line is end-of-life ("UNMAINTAINED — use gtk4
# instead", per the gtk crate page on crates.io). Tauri 2 itself tracks
# this as upstream-blocked — see tauri-apps/tauri#12048 (status: upstream)
# — and the fix is gated on tauri/wry migrating to gtk4. The vulnerable
# `VariantStrIter::impl_get` path is `cfg(target_os = "linux")` only,
# so macOS/Windows builds don't even compile it in, and wry doesn't
# invoke it in practice.
#
# Dependabot's PR noise for this advisory is silenced via the `ignore`
# rule in `.github/dependabot.yml`. The alert itself can be dismissed
# on the GitHub Security tab with reason "Vulnerable code is not
# reachable" once an org-owner reviews it.
