[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift"
version = "0.1.0"
description = "Minimal method-tracing for Python services"
requires-python = ">=3.10"
dependencies = [
    "wrapt>=1.16",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["drift*"]
