[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift"
version = "0.1.0"
description = "Minimal method-tracing for Python services"
requires-python = ">=3.7"
# Upper caps are semver-major only. Each dep declares its own Requires-Python,
# so pip auto-picks 3.7-compatible versions on 3.7 (wrapt 1.16, PyYAML 6.0.1)
# and current versions on 3.13 (wrapt 1.17+, PyYAML 6.0.2+).
dependencies = [
    "wrapt>=1.16,<2",
    "PyYAML>=6.0,<7",
    "typing_extensions>=4.0,<5",
]

[project.optional-dependencies]
dev = ["pytest>=7,<9", "build>=1.0,<2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["drift*"]
