[package]
name = "catalog-gen"
version = "0.1.0"
edition = "2021"
description = "Generate per-language module-category JSON catalogs from OpenTelemetry Registry and other sources"
license = "Apache-2.0"

[[bin]]
name = "catalog-gen"
path = "src/main.rs"

# Kept minimal on purpose: only ureq, serde, serde_json, serde_yaml, regex.
# All small, well-maintained, no native deps.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
ureq = { version = "2", features = ["json", "tls"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
